[package]
name = "rust-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ['rt',  "rt-multi-thread"] }
poem = "3.0.1"
poem-openapi = { version = "5.0.2", features = ["swagger-ui"] }
async-stream = "0.3.5"
futures-util = "0.3.30"
tracing-subscriber = "0.3.18"

eventsource-client = "0.12.2"
futures = "0.3.30"